hphp/hack/test/typecheck/trait_method_conflict_via_parent_and_child_trait.php.exp
ERROR: File "trait_method_conflict_via_parent_and_child_trait.php", line 31, characters 7-12:
Some members in class `Child1` are incompatible with those declared in type `TraitA` (Typing[4341])
  File "trait_method_conflict_via_parent_and_child_trait.php", line 20, characters 26-38:
  The method `configPrivacy` is not compatible with the overridden method
  File "trait_method_conflict_via_parent_and_child_trait.php", line 20, characters 26-38:
  `TraitB` and `TraitA` both declare ambiguous implementations of `configPrivacy`.
  File "trait_method_conflict_via_parent_and_child_trait.php", line 20, characters 26-38:
  `TraitB`'s definition is here.
  File "trait_method_conflict_via_parent_and_child_trait.php", line 11, characters 26-38:
  `TraitA`'s definition is here.
  File "trait_method_conflict_via_parent_and_child_trait.php", line 20, characters 26-38:
  Redeclare `configPrivacy` in `Child1` with a compatible signature.
ERROR: File "trait_method_conflict_via_parent_and_child_trait.php", line 37, characters 7-12:
Some members in class `Child2` are incompatible with those declared in type `TraitA` (Typing[4341])
  File "trait_method_conflict_via_parent_and_child_trait.php", line 20, characters 26-38:
  The method `configPrivacy` is not compatible with the overridden method
  File "trait_method_conflict_via_parent_and_child_trait.php", line 20, characters 26-38:
  `TraitB` and `TraitA` both declare ambiguous implementations of `configPrivacy`.
  File "trait_method_conflict_via_parent_and_child_trait.php", line 20, characters 26-38:
  `TraitB`'s definition is here.
  File "trait_method_conflict_via_parent_and_child_trait.php", line 11, characters 26-38:
  `TraitA`'s definition is here.
  File "trait_method_conflict_via_parent_and_child_trait.php", line 20, characters 26-38:
  Redeclare `configPrivacy` in `Child2` with a compatible signature.
